Finally fixed issue where ships would spill over the sides

--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,7 @@ body {
 .boardSide {
     background-color: lightgrey;
 }
+
+.selectedSquare {
+    background-color: black;
+}
